Fixed misaligned play/pause buttons, adjusted killline drawing

--- a/style.css
+++ b/style.css
@@ -470,12 +470,13 @@ for i in range(1,3):
 	#startPauseButton:hover {
 		background-color: darkslategray;
 	}
+
 	
 	.play-icon {
 		width: 100%;
+		height: 100%;
 		display: none;
 		margin: 0 auto;
-		padding: 0.2em 0 0 0.2em;
 		color: #fff;
 		-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 	}
@@ -488,18 +489,18 @@ for i in range(1,3):
 		box-sizing: border-box;
 		outline: inherit;
 		width: 100%;
-		height: auto;
+		height: 100%;
 	}
-	
+
 	.pause-icon {
 		width: 100%;
+		height: 100%;
 		display: none;
 		margin: 0 auto;
-		padding: 0.2em 0 0 0.2em;
 		color: #fff;
 		-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 		width: 100%;
-		height: auto;
+		height: 100%;
 	}
 	
 	.pause-icon svg {
